fix: alert in dark mode

--- a/src/styles/alert.scss
+++ b/src/styles/alert.scss
@@ -2,14 +2,15 @@
     padding: 1rem;
     border: 0;
     border-left-width: 4px;
-    border-left-color: rgb(201, 222, 250);
-    background-color: rgb(239, 246, 255);
+    border-left-color: var(--alert-border-color);
+    background-color: var(--alert-bg-color);
     border-style: solid;
     
     p {
         margin-left: .75rem;
         font-size: 1rem;
         line-height: 1.25rem;
-        color: rgb(48, 123, 221);
+        color: var(--alert);
     }
+
 }
